Add administrative filters to fuel statistics
